<resources>
    <string name="app_name">CatchApp</string>
    <string name="title_text">Google Sign-In\nfor CatchApp</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <!--<string name="sign_out">Sign Out</string>-->
    <string name="continue_button">Continue</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!--List of activities-->
    <string name="sign_in_activity">Sign in Activity</string>
    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Google Sign.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->

    <string name="server_client_id">678920127106-8h06pbtkinqemr7b6gripgjv3bv1gc8h.apps.googleusercontent.com </string>
    <!--<string name="server_client_id">654761864013-pgjtr4q6kbmnjitafec1l5oocb6ai4ck.apps.googleusercontent.com </string>-->
    <string name="sign_up">Sign up</string>
    <string name="pwd">password</string>
    <string name="email">email</string>
    <string name="send_message">Send</string>
    <string name="enter_message">Enter a message</string>
    <string name="to">To</string>
    <string name="new_event_name">Enter event name</string>
    <string name="create_event">Create</string>
    <string name="friend_search">Enter person name</string>
    <string name="add_friend">Add friend</string>
    <string name="map">map</string>
    <string name="title_activity_map_view">Map</string>
    <string name="ar_button">AR</string>

    <string name="events">Events</string>
    <string name="friends">Friends</string>
    <string name="messages">Messages</string>
    <string name="user_name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="sign_out">Sign Out</string>
    <string name="visibility">Visibility</string>
    <string name="loc">Location</string>
    <string name="notifications">Notifications</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>

</resources>
